containers: +web diff: +selenium(record-vids? no)

--- a/CFG/container.cfg
+++ b/CFG/container.cfg
@@ -14,7 +14,7 @@ local cmd_env="-e SCREEN='Record VNC'"
 commander test -v alias_selenium
 commander test -n "$alias_selenium"
 #commander docker run $volume_tmp $volume_build --privileged -p 5999:5999 -p 4444:4444 -d --name $alias_selenium $CONTAINER_SEL2
-commander docker run --privileged $cmd_env $volume_build $volume_tmp -p 4444:4444 -p 5999:5999 -d --name $alias_selenium lewisw/selenium
+commander docker run --privileged $cmd_env $volume_share $volume_build $volume_tmp -p 4444:4444 -p 5999:5999 -d --name $alias_selenium lewisw/selenium
 
 
 #docker pull vvoyer/docker-selenium-firefox-chrome
