--- a/CFG/vars.cfg
+++ b/CFG/vars.cfg
@@ -18,6 +18,8 @@ flag_docker_deamon='-d'
 ############################################ volumes
 volume_extra='-v /extra:/extra:ro'
 
+volume_share='-v /share:/share:ro'
+
 create_dir(){
 local dir=$1
 test -d $dir || { mkdir -p $dir; chmod 777 $dir; }
