[exec.sh] +trace

--- a/CFG/container.cfg
+++ b/CFG/container.cfg
@@ -110,7 +110,7 @@ run_mysql(){
 #MYSQL_PASSWORD=$(cat /dev/urandom | tr -dc 'a-zA-Z0-9' | fold -w 32 | sed 1q)
 #Start the MySQL container and create a new DB for the Enterprise registry:
 
-    docker \
+    commander docker \
         run \
         --detach \
         --env MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD} \
