--- a/CFG/container.cfg
+++ b/CFG/container.cfg
@@ -55,7 +55,7 @@ run_webapp(){
         test -v alias_mongo
 #( detect_running )
 #commander "docker run --link $alias_mongo:db --link $alias_selenium:selenium $volume_tmp2 $volume_extra  $opts_gitlab $flag_docker -t $CONTAINER_APP bash -c '$cmd_start'" #with mongo
-        commander "docker run  --link $alias_selenium:selenium $volume_tmp2 $volume_extra  $opts_gitlab $flag_docker -t $CONTAINER_APP bash -c '$cmd_start'"
+        commander "docker run --name onbuild --link $alias_selenium:selenium $volume_ssh $volume_tmp2 $volume_extra  $opts_gitlab $flag_docker -t $CONTAINER_APP bash -c '$cmd_start'"
 }
 
 
