--- a/CFG/vars.cfg
+++ b/CFG/vars.cfg
@@ -26,8 +26,8 @@ flag_docker_deamon='-d'
 
 volume_drupal='/var/www/html:/var/www/html'
 volume_extra='-v /extra:/extra:ro'
-
 volume_share='-v /share:/share:ro'
+volume_ssh='-v /root/.ssh:/home/gitlab_ci_runner/.ssh'
 
 create_dir(){
 local dir=$1
@@ -51,4 +51,5 @@ flag_mongo="--rest --httpinterface --smallfiles"
 ########################################### CONST
 DISKSPACE_PERCENT=80
 MONGO_PORT1=27017
+
 
