--- a/CFG/vars.cfg
+++ b/CFG/vars.cfg
@@ -27,7 +27,8 @@ flag_docker_deamon='-d'
 volume_drupal='/var/www/html:/var/www/html'
 volume_extra='-v /extra:/extra:ro'
 volume_share='-v /share:/share:ro'
-volume_ssh='-v /root/.ssh:/home/gitlab_ci_runner/.ssh'
+volume_ssh='-v /root/.ssh:/root/.ssh'
+volume_docker_in_docker="-v /var/run/docker.sock:/var/run/docker.sock -v $(which docker):/bin/docker"
 
 create_dir(){
 local dir=$1
