--- a/CFG/container.cfg
+++ b/CFG/container.cfg
@@ -49,13 +49,20 @@ run_tests(){
 }
 
 run_webapp(){
+
+local cmd_apparmor='-v /usr/lib/x86_64-linux-gnu/libapparmor.so.1.1.0:/lib/x86_64-linux-gnu/libapparmor.so.1'
     local cmd_start="${1:-'env'}"
         local flag_docker="${2:-'-i'}"
         test -v alias_selenium
         test -v alias_mongo
 #( detect_running )
 #commander "docker run --link $alias_mongo:db --link $alias_selenium:selenium $volume_tmp2 $volume_extra  $opts_gitlab $flag_docker -t $CONTAINER_APP bash -c '$cmd_start'" #with mongo
-        commander "docker run --name onbuild --link $alias_selenium:selenium $volume_ssh $volume_tmp2 $volume_extra  $opts_gitlab $flag_docker -t $CONTAINER_APP bash -c '$cmd_start'"
+        commander "docker run --name onbuild \
+--privileged=true $cmd_apparmor -v /var/run/docker.sock:/var/run/docker.sock \
+           -v $(which docker):/usr/bin/docker \
+        --link $alias_selenium:selenium $volume_ssh $volume_tmp2 $volume_extra  $opts_gitlab $flag_docker -t $CONTAINER_APP bash -c '$cmd_start'"
+
+
 }
 
 
