newer gitlab-ci-runner

--- a/CFG/container.cfg
+++ b/CFG/container.cfg
@@ -48,6 +48,57 @@ run_tests(){
         commander "docker run $volume_tmp2 $cmd_volume $cmd_link $flag_docker $container bash < $file_test"
 }
 
+
+run_gitlab_multi_runner(){
+
+local cmd_apparmor='-v /usr/lib/x86_64-linux-gnu/libapparmor.so.1.1.0:/lib/x86_64-linux-gnu/libapparmor.so.1'
+    local cmd_start="${1:-'env'}"
+        local flag_docker="${2:-'-i'}"
+        test -v alias_selenium
+        test -v alias_mongo
+        test -d /tmp/22 && { \
+            mv /tmp/22 "/tmp/22/$(date +%s)";
+        }
+        #test -d /tmp/keep || { mkdir -p /tmp/keep; }
+#( detect_running )
+#commander "docker run --link $alias_mongo:db --link $alias_selenium:selenium $volume_tmp2 $volume_extra  $opts_gitlab $flag_docker -t $CONTAINER_APP bash -c '$cmd_start'" #with mongo
+    #    commander "docker run --name onbuild \
+
+
+     commander cat /srv/gitlab-runner/config/*
+     sleep 2
+ commander docker run -d --name gitlab-runner \
+ --restart always \
+--privileged=true $cmd_apparmor -v /var/run/docker.sock:/var/run/docker.sock \
+           -v $(which docker):/usr/bin/docker \
+        $volume_ssh  \
+        $volume_extra   \
+--link $alias_selenium:selenium  \
+               -v /var/run/docker.sock:/var/run/docker.sock \
+                       -v /srv/gitlab-runner/config:/etc/gitlab-runner \
+                                 gitlab/gitlab-runner:latest
+
+ docker exec  gitlab-runner adduser gitlab-runner sudo
+docker exec  gitlab-runner  bash -c 'echo "gitlab-runner ALL=NOPASSWD: ALL" > /etc/sudoers.d/gitlab-runner'
+
+
+   #  trace echo -e "https://ci0.gitlab.linnovate.net\n481f4cbc1a5420db0340\ngitlab-runner\ndocker\nruby:2.1\n\n\n\n" | docker exec -i gitlab-runner gitlab-runner register
+
+
+     #echo docker exec -it gitlab-runner gitlab-runner register
+
+
+
+       # --link $alias_selenium:selenium 
+        #$volume_tmp2 
+        #$opts_gitlab $flag_docker -t $CONTAINER_APP bash -c '$cmd_start'"
+         #  -v /tmp/keep:/tmp \
+         #https://gitlab.com/gitlab-org/gitlab-ci-multi-runner/blob/master/docs/install/docker.md
+
+
+      docker exec -it gitlab-runner gitlab-runner --debug run
+
+}
 run_webapp(){
 
 local cmd_apparmor='-v /usr/lib/x86_64-linux-gnu/libapparmor.so.1.1.0:/lib/x86_64-linux-gnu/libapparmor.so.1'
@@ -159,3 +210,4 @@ export -f run_mongo_wrapper
 export -f run_webapp_interactive
 export -f run_webapp_deamon
 export -f run_selenium
+export -f run_gitlab_multi_runner
