--- a/CFG/vars.cfg
+++ b/CFG/vars.cfg
@@ -12,8 +12,10 @@ CONTAINER_MYSQL=mysql/mysql-server
 
 #CONTAINER_DB='dockerfile/mongodb'
 ############################################ aliases
-alias_mongo="mongo_deamon$(date +%s)"
-export alias_selenium="selenium_deamon$(date +%s)"
+alias_mongo="mongo_deamon"
+#$(date +%s)"
+export alias_selenium="selenium_deamon"
+#$(date +%s)"
 export alias_drupal=drupal1
 ############################################ docker flags
 flag_docker_interactive='-i --rm'
