--- a/CFG/container.cfg
+++ b/CFG/container.cfg
@@ -81,6 +81,9 @@ local cmd_apparmor='-v /usr/lib/x86_64-linux-gnu/libapparmor.so.1.1.0:/lib/x86_6
  docker exec  gitlab-runner adduser gitlab-runner sudo
 docker exec  gitlab-runner  bash -c 'echo "gitlab-runner ALL=NOPASSWD: ALL" > /etc/sudoers.d/gitlab-runner'
 
+# docker exec  gitlab-runner adduser gitlab-runner sudo apt-get install nodejs 
+
+
 
    #  trace echo -e "https://ci0.gitlab.linnovate.net\n481f4cbc1a5420db0340\ngitlab-runner\ndocker\nruby:2.1\n\n\n\n" | docker exec -i gitlab-runner gitlab-runner register
 
