--- a/CFG/vars.cfg
+++ b/CFG/vars.cfg
@@ -37,13 +37,16 @@ local dir=$1
 test -d $dir || { mkdir -p $dir; chmod 777 $dir; }
 }
 
-create_dir /tmp/build
-create_dir /tmp/11
-create_dir /tmp/22
+export time_stamp=$(date +%s)
+export dir_tmp1=/tmp/docker_playground_tmp/$time_stamp
 
-volume_tmp='-v /tmp/11:/tmp'
-volume_tmp2='-v /tmp/22:/tmp'
-volume_build='-v /tmp/build:/build'
+create_dir $dir_tmp1/build
+create_dir $dir_tmp1/11
+create_dir $dir_tmp1/22
+
+volume_tmp='-v $dir_tmp1/11:$dir_tmp1'
+volume_tmp2='-v $dir_tmp1/22:$dir_tmp1'
+volume_build='-v $dir_tmp1/build:/build'
 
 volume_data='-v /data:/data'
 ########################################### mongo conf
