readme.md - duplicate elgalu:selenium:readme

--- a/CFG/container.cfg
+++ b/CFG/container.cfg
@@ -65,15 +65,16 @@ local cmd_apparmor='-v /usr/lib/x86_64-linux-gnu/libapparmor.so.1.1.0:/lib/x86_6
     #    commander "docker run --name onbuild \
 
 
+
+#--link $alias_selenium:selenium  \
      commander cat /srv/gitlab-runner/config/*
      sleep 2
  commander docker run -d --name gitlab-runner \
  --restart always \
 --privileged=true $cmd_apparmor -v /var/run/docker.sock:/var/run/docker.sock \
            -v $(which docker):/usr/bin/docker \
-        $volume_ssh  \
+        $volume_ssh \
         $volume_extra   \
---link $alias_selenium:selenium  \
                -v /var/run/docker.sock:/var/run/docker.sock \
                        -v /srv/gitlab-runner/config:/etc/gitlab-runner \
                                  gitlab/gitlab-runner:latest
@@ -118,7 +119,7 @@ local cmd_apparmor='-v /usr/lib/x86_64-linux-gnu/libapparmor.so.1.1.0:/lib/x86_6
         commander "docker run --name onbuild \
 --privileged=true $cmd_apparmor -v /var/run/docker.sock:/var/run/docker.sock \
            -v $(which docker):/usr/bin/docker \
-        --link $alias_selenium:selenium $volume_ssh $volume_tmp2 $volume_extra  $opts_gitlab $flag_docker -t $CONTAINER_APP bash -c '$cmd_start'"
+        --link $alias_selenium:selenium $volume_ssh $volume_ssh1 $volume_tmp2 $volume_extra  $opts_gitlab $flag_docker -t $CONTAINER_APP bash -c '$cmd_start'"
          #  -v /tmp/keep:/tmp \
 
 
