--- a/CFG/vars.cfg
+++ b/CFG/vars.cfg
@@ -14,7 +14,8 @@ CONTAINER_MYSQL=mysql/mysql-server
 ############################################ aliases
 alias_mongo="mongo_deamon"
 #$(date +%s)"
-export alias_selenium="selenium_deamon"
+export alias_selenium="grid"
+#selenium_deamon"
 #$(date +%s)"
 export alias_drupal=drupal1
 ############################################ docker flags
@@ -29,6 +30,7 @@ flag_docker_deamon='-d'
 volume_drupal='/var/www/html:/var/www/html'
 volume_extra='-v /extra:/extra:ro'
 volume_share='-v /share:/share:ro'
+volume_ssh1='-v /root/.ssh:/gitlab-runner/.ssh'
 volume_ssh='-v /root/.ssh:/root/.ssh'
 volume_docker_in_docker="-v /var/run/docker.sock:/var/run/docker.sock -v $(which docker):/bin/docker"
 
